--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "analyze": "tsx src/strategy-analyzer.ts",
     "backtest": "tsx src/backtest.ts",
     "monitor": "tsx src/monitor.ts",
-    "web": "tsx src/web-server.ts",
+    "web": "tsx src/server/web-server.ts",
     "selfcheck:proxy": "node ./scripts/selfcheck-proxy.cjs"
   },
   "keywords": [
