--- a/package.json
+++ b/package.json
@@ -30,25 +30,31 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "axios": "^1.6.0",
+    "axios": "^1.11.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "http-proxy-middleware": "^2.0.9",
+    "lodash": "^4.17.21",
+    "ml-matrix": "^6.10.7",
+    "moment": "^2.29.4",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "simple-statistics": "^7.8.3",
     "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "technicalindicators": "^3.1.0",
-    "ws": "^8.14.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-
-    "ml-matrix": "^6.10.7",
-    "simple-statistics": "^7.8.3"
+    "winston": "^3.17.0",
+    "ws": "^8.14.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.11",
     "@types/lodash": "^4.14.202",
+    "@types/node": "^20.19.11",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.0",
     "tsx": "^4.0.0",
     "typescript": "^5.2.0"
