feat(ui): 顶部开单推荐取最新；合并活跃+历史；新增解析函数；服务端同步

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,31 @@ ML_CONFIDENCE_THRESHOLD=0.6
 MONITOR_INTERVAL=5000
 LOG_LEVEL=info
 ENABLE_NOTIFICATIONS=true
+
+# Kronos 在线推理服务配置
+KRONOS_ENABLED=true
+KRONOS_BASE_URL=http://localhost:8001
+KRONOS_TIMEOUT_MS=1200
+KRONOS_INTERVAL=1H
+KRONOS_LOOKBACK=480
+KRONOS_LONG_THRESHOLD=0.62
+KRONOS_SHORT_THRESHOLD=0.62
+KRONOS_MIN_CONFIDENCE=0.55
+
+# ===== Strategy Oscillators & Gating (New) =====
+USE_KDJ=false
+USE_WILLIAMS=false
+
+GATE_ADX_ENABLED=false
+GATE_ADX_MIN=25
+
+GATE_VOLUME_ENABLED=false
+GATE_OBV_SLOPE_MIN=0
+GATE_VOLUME_RATIO_MIN=0.7
+
+GATE_VOLATILITY_ENABLED=false
+GATE_ATR_PCT_MIN=0.005
+GATE_SQUEEZE_BLOCK=true
+
+# Kronos blending cap
+KRONOS_ALPHA_MAX=0.6
