docs: 更新 README 目录与拓扑图；chore: 同步首页文案与端口说明；refactor: 微调 web-server 端口与状态说明

--- a/.env.example
+++ b/.env.example
@@ -78,3 +78,12 @@ GATE_SQUEEZE_BLOCK=true
 
 # Kronos blending cap
 KRONOS_ALPHA_MAX=0.6
+
+# ===== Recommendation Tracking (New) =====
+# 最大持仓时长（小时）。设置为 0 或负数可关闭自动过期
+RECOMMENDATION_MAX_HOLDING_HOURS=168
+# 并发计数时间窗口（小时）。仅统计该时长内的 ACTIVE 推荐用于并发上限判断
+RECOMMENDATION_CONCURRENCY_AGE_HOURS=24
+
+# .env.example 中加入新变量注释，帮助用户理解配置（不创建新文件，仅在已存在文件末尾追加）
+# RECOMMENDATION_TRAIL_ACTIVATE_PROFIT_PCT=2.2  # 只有当基础涨跌幅达到该阈值（%）后才开始移动追踪止盈/止损
