--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "tsx src/index.ts",
+    "start:best": "cross-env CONFIG_PLAYBACK_PATH=./config-best.json tsx src/index.ts",
     "analyze": "tsx src/strategy-analyzer.ts",
     "backtest": "tsx src/backtest.ts",
     "monitor": "tsx src/monitor.ts",
@@ -17,7 +18,27 @@
     "backfill:targets": "tsx src/scripts/backfill-target-prices.ts",
     "e2e:real": "cross-env WEB_PORT=3013 LIMIT=1440 node scripts/e2e_real_data.cjs",
     "e2e:after-patch": "cross-env WEB_PORT=3013 node scripts/e2e_after_patch.cjs",
-    "e2e:adequate": "cross-env WEB_PORT=3013 LIMIT=43210 node scripts/e2e_real_data.cjs"
+    "e2e:adequate": "cross-env WEB_PORT=3013 LIMIT=43210 node scripts/e2e_real_data.cjs",
+    "e2e:expire": "cross-env WEB_PORT=3031 node scripts/e2e_expire.cjs",
+    "e2e:auto-timeout": "cross-env WEB_PORT=3031 node scripts/e2e_auto_timeout.cjs",
+    "e2e:cw": "cross-env WEB_PORT=3031 node scripts/e2e_concurrency_window.cjs",
+    "e2e:bypass": "cross-env WEB_PORT=3031 node scripts/e2e_bypass_cooldown.cjs",
+    "manual:bypass": "tsx scripts/manual_bypass_check.ts",
+    "e2e:bypass:axios": "cross-env WEB_PORT=3031 node scripts/e2e_bypass_cooldown_axios.cjs",
+    "e2e:same-dir:axios": "cross-env WEB_PORT=3031 node scripts/e2e_same_dir_cooldown_axios.cjs",
+    "e2e:hourly-cap": "cross-env WEB_PORT=3032 node scripts/e2e_hourly_cap_axios.cjs",
+    "e2e:opposite:axios": "cross-env WEB_PORT=3031 node scripts/e2e_opposite_cooldown_axios.cjs",
+    "e2e:errors:axios": "cross-env WEB_PORT=3001 node scripts/e2e_error_mapping_axios.cjs",
+    "ci:e2e:bypass": "node scripts/ci_bypass_runner.cjs",
+    "ci:e2e:cooldowns": "node scripts/ci_cooldowns_runner.cjs",
+    "e2e:exposure:cap": "node scripts/e2e_exposure_cap.cjs",
+    "e2e:exposure:limit": "node scripts/e2e_exposure_limit.cjs",
+    "ci:e2e:limits": "node scripts/ci_limits_runner.cjs",
+    "ci:e2e:all": "node scripts/ci_all_runner.cjs",
+    "e2e:mtf:axios": "cross-env WEB_PORT=3001 node scripts/e2e_mtf_consistency_axios.cjs",
+    "e2e:stats:axios": "cross-env WEB_PORT=3001 node scripts/e2e_stats_ev_axios.cjs",
+    "e2e:ev-monitor:axios": "cross-env WEB_PORT=3001 node scripts/e2e_ev_monitoring_axios.cjs",
+    "start:e2e": "cross-env WEB_DISABLE_EXTERNAL_MARKET=1 DISABLE_EXTERNAL_MARKET_ON_CREATE=1 WEB_DISABLE_RECO_INIT=1 WEB_DISABLE_REALTIME=1 WEB_PORT=3031 CONFIG_PLAYBACK_PATH=./config-best.json tsx src/index.ts"
   },
   "keywords": [
     "ethereum",
