chore(config): make npm start default to playback; unify WEB_PORT=3031 across scripts and .env.example; keep .env ignored

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "tsx src/index.ts",
+    "start": "npm run start:playback",
     "start:best": "cross-env CONFIG_PLAYBACK_PATH=./config-best.json tsx src/index.ts",
     "analyze": "tsx src/strategy-analyzer.ts",
     "backtest": "tsx src/backtest.ts",
