--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,42 @@ yarn-error.log*
 package-lock.json
 
 # Environment variables
-.env
+# Dependencies
+node_modules/
+
+# Build outputs
+/dist/
+
+# Logs and debug
+/logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache and temp
+/cache/
+/tmp/
+/snapshots/
+/server-snapshot/
+/backups/
+
+# Databases and data dumps
+/data/*.db
+/data/*.db-*
+/data/recommendations.db*
+/data/backups/
+/data/models/
+
+# Runtime artifacts
+/http-debug/
+/verify-logs/
+/meta/*.txt
+
+# OS files
+.DS_Store
+Thumbs.db
+
 .env.local
 .env.development.local
 .env.test.local
